force-app/main/default/objects/Ajuste__c/fields/Monto__c.field-meta.xml
<CustomField>
    <fullName>Monto__c</fullName>
    <label>Monto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>